--- a/gb/24/7/2/n14282380.md
+++ b/gb/24/7/2/n14282380.md
@@ -3,51 +3,47 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>加台联换届 6位理事获美国总统终身成就奖</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/07/id14282389-5156bac69d644d9d3a31cd9ccabba7b6-scaled-e1719954992482.jpg" />
-<h6>2024年6月30日，加台联六位理事获美国总统拜登终身成就奖，由联邦众议员赵美心（右四）和刘云平（左四）代发奖状。（徐曼沅／大纪元）
-</h6>
+<h6>2024年6月30日，加台联六位理事获美国总统拜登终身成就奖，由联邦众议员赵美心（右四）和刘云平（左四）代发奖状。（徐曼沅／大纪元）</h6>
 <hr>
 	<p>【大纪元2024年07月03日讯】（大纪元记者徐曼沅洛杉矶报导）加州台湾同乡联谊会6月30日于圣盖博市希尔顿酒店举行第46届年会暨会长换届典礼，在驻洛杉矶台北经济文化办事处副处长张正育监交下，王竹青交棒储锦琪；联邦众议员赵美心（Judy Chu）、刘云平（Ted Lieu）以及加州众议员方树强（Mike Fong）和多位民选官员等逾四百位嘉宾见证同贺。</p>
-<figure id="attachment_14282391" aria-describedby="caption-attachment-14282391" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14282391-2a7a77c200684db3256cc13f5ebfccef-scaled.jpg"><img decoding="async" class="size-large wp-image-14282391" src="https://i.epochtimes.com/assets/uploads/2024/07/id14282391-2a7a77c200684db3256cc13f5ebfccef-600x290.jpg" alt="" width="600" b="290" /></a><figcaption id="caption-attachment-14282391" class="wp-caption-text">2024年6月30日，加台联于圣盖博市希尔顿酒店举行第46届年会。（徐曼沅／大纪元）</figcaption></figure>
-<figure id="attachment_14282393" aria-describedby="caption-attachment-14282393" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14282393-094579a1c3bf203a4ebd322bcef9e7d0-scaled.jpg"><img decoding="async" class="size-large wp-image-14282393" src="https://i.epochtimes.com/assets/uploads/2024/07/id14282393-094579a1c3bf203a4ebd322bcef9e7d0-600x322.jpg" alt="" width="600" b="322" /></a><figcaption id="caption-attachment-14282393" class="wp-caption-text">2024年6月30日，在经文处副处长张正育监交下，王竹青（左）正式将加台联的印信交接给新任会长储锦琪（右）。（徐曼沅／大纪元）</figcaption></figure>
+<figure id="attachment_14282391" aria-describedby="caption-attachment-14282391" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14282391-2a7a77c200684db3256cc13f5ebfccef-scaled.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14282391" src="https://i.epochtimes.com/assets/uploads/2024/07/id14282391-2a7a77c200684db3256cc13f5ebfccef-600x290.jpg" alt="" width="600" b="290"></a><figcaption id="caption-attachment-14282391" class="wp-caption-text">2024年6月30日，加台联于圣盖博市希尔顿酒店举行第46届年会。（徐曼沅／大纪元）</figcaption></figure>
+<figure id="attachment_14282393" aria-describedby="caption-attachment-14282393" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14282393-094579a1c3bf203a4ebd322bcef9e7d0-scaled.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14282393" src="https://i.epochtimes.com/assets/uploads/2024/07/id14282393-094579a1c3bf203a4ebd322bcef9e7d0-600x322.jpg" alt="" width="600" b="322"></a><figcaption id="caption-attachment-14282393" class="wp-caption-text">2024年6月30日，在经文处副处长张正育监交下，王竹青（左）正式将加台联的印信交接给新任会长储锦琪（右）。（徐曼沅／大纪元）</figcaption></figure>
 <p>张正育表示，加台联自1978年成立以来，秉持“时时关心台湾、处处照顾乡亲”的宗旨，积极举办各类活动，促进侨民团结，坚定支持中华民国台湾。他颁发证书表彰加台联长期以来对台美社区的贡献，并恭贺储锦琪接任会长，期待在新会长带领下，加台联再创高峰。</p>
 <p>满任会长王竹青感谢所有嘉宾参与自己的“毕业典礼”。自2022年接任以来，他秉持“传承”与“创新”的理念，带领加台联在南加州台裔社区举办了许多活动，如让人津津乐道的双十国庆升旗典礼、登山健行和保龄球比赛。卸任后王竹青将持续为加台联服务，促进台美关系，帮助亚裔社区走向主流，让更多人听见亚裔的诉求。</p>
-<figure id="attachment_14282395" aria-describedby="caption-attachment-14282395" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14282395-5f14836ae4eee5b57cf5a91052afb462-scaled.jpg"><img decoding="async" class="size-large wp-image-14282395" src="https://i.epochtimes.com/assets/uploads/2024/07/id14282395-5f14836ae4eee5b57cf5a91052afb462-600x329.jpg" alt="" width="600" b="329" /></a><figcaption id="caption-attachment-14282395" class="wp-caption-text">2024年6月30日，台湾会馆前董事长陈柏宇（右二）出席加台联第46届年会。（徐曼沅／大纪元）</figcaption></figure>
-<figure id="attachment_14282397" aria-describedby="caption-attachment-14282397" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14282397-4ad5ecbebf860f46dcbfe2d143dc4b87-scaled.jpg"><img decoding="async" class="size-large wp-image-14282397" src="https://i.epochtimes.com/assets/uploads/2024/07/id14282397-4ad5ecbebf860f46dcbfe2d143dc4b87-600x337.jpg" alt="" width="600" b="337" /></a><figcaption id="caption-attachment-14282397" class="wp-caption-text">2024年6月30日，南加世华工商妇女企管协会会长游蕙绫（前排右三）率成员参与加台联第46届年会。（徐曼沅／大纪元）</figcaption></figure>
+<figure id="attachment_14282395" aria-describedby="caption-attachment-14282395" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14282395-5f14836ae4eee5b57cf5a91052afb462-scaled.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14282395" src="https://i.epochtimes.com/assets/uploads/2024/07/id14282395-5f14836ae4eee5b57cf5a91052afb462-600x329.jpg" alt="" width="600" b="329"></a><figcaption id="caption-attachment-14282395" class="wp-caption-text">2024年6月30日，台湾会馆前董事长陈柏宇（右二）出席加台联第46届年会。（徐曼沅／大纪元）</figcaption></figure>
+<figure id="attachment_14282397" aria-describedby="caption-attachment-14282397" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14282397-4ad5ecbebf860f46dcbfe2d143dc4b87-scaled.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14282397" src="https://i.epochtimes.com/assets/uploads/2024/07/id14282397-4ad5ecbebf860f46dcbfe2d143dc4b87-600x337.jpg" alt="" width="600" b="337"></a><figcaption id="caption-attachment-14282397" class="wp-caption-text">2024年6月30日，南加世华工商妇女企管协会会长游蕙绫（前排右三）率成员参与加台联第46届年会。（徐曼沅／大纪元）</figcaption></figure>
 <p>联邦众议员赵美心、刘云平相继上台颁赠褒奖，表彰王竹青和加台联的贡献，并祝福新会长储锦琪接任；同时将美国总统拜登颁发的终身成就奖颁赠6位理事，该奖项亦肯定了加台联多年来对社区的贡献。</p>
 <p>前加州众议员伍国庆（Mike Eng）、中华会馆主席李金生、台湾会馆前董事长陈柏宇、南加大专校友会会长吴典龙、圣盖博市市议员丁言愉（Tony Ding）、蒙市市长黄泰平（Thomas Wong）、亚凯迪亚市议员郑博仁和王爱琳等多位民选官员和南加侨界领袖，也纷纷上台致贺。</p>
 <p>储锦琪介绍新团队——第一副会长刘焕君和第二副会长张耀灿。她表示未来将会延续加台联优良的传统，除举办国庆升旗典礼、登山健行等活动，也将积极推动走入主流社区的活动，鼓励年轻世代参与加台联，推动中华文化，让美国社会认识亚裔。◇</p>
 <p>责任编辑：嘉莲</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/4/n14194342.md#1">洛杉矶荣光联谊会换届 陆军将迎黄埔建校百年大庆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/11/n14199649.md#1">南加侨界健行寻宝 缅怀国父孙中山</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/22/n14231797.md#1">退辅会驻美参事倪邦臣访洛城 赞侨民推动国家认同</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268701.md#1">加台联父亲节保龄球赛 侨民以球会友</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/3/n10828040.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（中）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/22/n8022581.md#1" target="_blank">因祸得福，我用生命迎接春天</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/14/n9839893.md#1" target="_blank">郭婉莹——被遗忘的“上海公主”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/30/n11355603.md#1" target="_blank">法轮功阿根廷洪传19年 法官曾要抓江罗</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284473.md#1">老僧预言他将大祸临头 权倾天下的他将如何选择？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286164.md#1">【未解之谜】最可信的穿越者 他在历史中留下了证据</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289654.md#1">【音乐】五月的希望</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289728.md#1">【未解之谜】“目睹”三次文明毁灭 濒死中看到未来</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285490.md#1">故宫耐得十级地震测试 夸世建筑秘诀藏在何处？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291389.md#1">【神韵早期节目】仙莲（2017年制作）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290106.md#1">【时事军事】共军真要去欧洲打仗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291211.md#1">【未解之谜】精准预测川普遇刺 牧师：美国将在巨大危机后复兴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289299.md#1">中国6月进出口数据现警讯 贸易冲突或加剧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289943.md#1">中共三中全会将开 观察家纷纷看衰前景</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290122.md#1">演唱会中途不停要喝水 刘德华身体状况引担忧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290096.md#1">油管史上第一人 网红MrBeast频道订阅数破3亿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289693.md#1">力压张若昀和胡歌 朱一龙获陆剧小生演技冠军</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289755.md#1">张艺兴演唱会上为母亲庆生 一口误引全场笑声</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290112.md#1">29岁港星文颂男病逝 临终前3天写好告别文</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290989.md#1">用这一物可以让老鼠逃离花园 你身上就有</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290376.md#1">美国癌症协会：4成癌症病例与生活习惯有关</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282431.md#1">夺走拿破仑生命的胃癌  医生教你6招预防</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289471.md#1">爱吃芒果必学技 5种切法不浪费果肉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287437.md#1">学会相信自己 有助摆脱情勒的恐惧</a></li>
-<hr>
-<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/7/2/n14282380.htm">加台联换届 6位理事获美国总统终身成就奖</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/7/2/n14282380.htm">加台联换届 6位理事获美国总统终身成就奖</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282380.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
