--- a/gb/24/7/8/n14285892.md
+++ b/gb/24/7/8/n14285892.md
@@ -6,43 +6,44 @@
 <h6>2024年7月7日，“七七抗战”87周年纪念大典释放和平鸽。（徐曼沅／大纪元）</h6>
 <hr>
 	<p>【大纪元2024年07月08日讯】（大纪元记者徐曼沅洛杉矶报导）为缅怀二战期间阵亡的中华将士，南加州中国大专院校联合校友会与蒙特利公园（Monterey Park）市政府于上周六（7月7日）在市府前广场，联合举办2024年“七七抗战”87周年纪念大典，释放和平鸽祝愿世界和平。</p>
-<figure id="attachment_14287183" aria-describedby="caption-attachment-14287183" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14287183-304030c9940d63c6cd48938aa7deac73.jpg"><img decoding="async" class="size-large wp-image-14287183" src="https://i.epochtimes.com/assets/uploads/2024/07/id14287183-304030c9940d63c6cd48938aa7deac73-600x375.jpg" alt="" width="600" b="375" /></a><figcaption id="caption-attachment-14287183" class="wp-caption-text">2024年7月7日，南加大专校友会于蒙特利公园市举行“七七抗战”87周年纪念大典。（徐曼沅／大纪元）</figcaption></figure>
+<figure id="attachment_14287183" aria-describedby="caption-attachment-14287183" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14287183-304030c9940d63c6cd48938aa7deac73.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14287183" src="https://i.epochtimes.com/assets/uploads/2024/07/id14287183-304030c9940d63c6cd48938aa7deac73-600x375.jpg" alt="" width="600" b="375"></a><figcaption id="caption-attachment-14287183" class="wp-caption-text">2024年7月7日，南加大专校友会于蒙特利公园市举行“七七抗战”87周年纪念大典。（徐曼沅／大纪元）</figcaption></figure>
 <p>纪念大典由旅美空小校友演唱空军军歌揭开序幕，并由中美退伍军人和中华旗队共同举行升旗仪式。此次活动主题为“华侨与抗战”，据统计，对日抗战八年期间，华侨捐款总额超过13亿国币，南洋有超过4万华侨参战，美国和澳洲华侨参战人数亦达到约1,000人，国军最后取得胜利，华侨功不可没。</p>
 <p>南京大屠杀见证人理查?布雷迪博士（Dr. Richard Brady）的后代杰夫（Jeff）也特别由圣地牙哥前来参与纪念大典，他的家族以曾经为中国人尽力为荣。美军代表亦出席了此次活动。</p>
 <p>蒙市市长黄泰平（Thomas Wong）、驻洛杉矶台北经济文化办事处处长纪钦耀、国会议员赵美心、洛杉矶华侨文教服务中心主任陈敏永、副主任方琼逸、罗省中华会馆主席李金生、美国越柬寮华人团体代表罗明、韩华代表迟景林、圣盖博市市议员丁言愉，以及多位中华民国荣誉职委员参与致意。</p>
-<figure id="attachment_14285933" aria-describedby="caption-attachment-14285933" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14285933-5080bf83f002202253fb703feae21e65-scaled.jpg"><img decoding="async" class="size-large wp-image-14285933" src="https://i.epochtimes.com/assets/uploads/2024/07/id14285933-5080bf83f002202253fb703feae21e65-600x374.jpg" alt="" width="600" b="374" /></a><figcaption id="caption-attachment-14285933" class="wp-caption-text">2024年7月7日，国会议员赵美心（右三）颁赠感谢状给“七七抗战”87周年纪念大典主办方。（徐曼沅／大纪元）</figcaption></figure>
+<figure id="attachment_14285933" aria-describedby="caption-attachment-14285933" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14285933-5080bf83f002202253fb703feae21e65-scaled.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14285933" src="https://i.epochtimes.com/assets/uploads/2024/07/id14285933-5080bf83f002202253fb703feae21e65-600x374.jpg" alt="" width="600" b="374"></a><figcaption id="caption-attachment-14285933" class="wp-caption-text">2024年7月7日，国会议员赵美心（右三）颁赠感谢状给“七七抗战”87周年纪念大典主办方。（徐曼沅／大纪元）</figcaption></figure>
 <p>赵美心为活动组织者颁发国会表彰证书，表扬他们在组织此次活动中的杰出贡献。赵美心表示，七七事变揭开中国对日抗战的序幕，在历史上有重大意义，她感谢南加各大社团对活动的支持，并强调铭记这段历史对当今社会仍很有启发。</p>
 <p>黄泰平为华裔美国人在社区中扮演的重要角色感到骄傲，他也分享了自己祖父在中华民国空军服役的经历，并强调“和平”对所有人的重要性。</p>
 <p>纪钦耀则表示，卢沟桥事变是抗战史上的重要一页，今年也是诺曼第登陆80周年。他呼吁众人珍惜和平，缅怀先烈的牺牲，同时继续支持中华民国。</p>
 <p>主办方南加州中国大专院校联合校友会会长吴典龙表示，希望通过纪念七七抗战，让更多华裔年轻世代认识历史，提高爱国意识；他呼吁海外侨民同心协力，促进台湾与美国关系更加和谐发展，共同祈求世界和平。◇</p>
 <p>责任编辑：方平</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/14/n13644498.md#1">中华联谊会理事长交接 张静如接棒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/26/n14022709.md#1">还原抗日真相 侨界将纪念抗战86周年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/7/10/n14031345.md#1">旧金山纪念抗战86周年 展示文物讲述历史真相</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277418.md#1">纪念抗战 罗省杰人会7月7日爱国歌唱大赛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/13/n9951832.md#1" target="_blank">老绥远韩氏：文革酷刑实录</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/31/n11014025.md#1" target="_blank">绝处逢生 79岁老军医讲述的亲身经历</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/23/n10418231.md#1" target="_blank">晓明：一个枪口余生者的人生之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/5/n10279698.md#1" target="_blank">百岁老人：法轮功延长了我的寿命</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14622152.md#1">科学家濒死7秒经历神奇事件 颠覆人生认知</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/19/n14619422.md#1">【未解之谜】天才科学家杨定一的灵性之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14616650.md#1">哈尔斯的《笑面骑士》：艺术史上最英俊男子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14615995.md#1">最是想念的季节：珍藏霜降之美 深秋平补养生有道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/11/n14614307.md#1">汉朝丞相公孙弘：海边放猪户扭转人生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/24/n14623000.md#1">【时政春秋】盘点中共四中全会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/24/n14622995.md#1">【思想领袖】重建信仰与理性 拯救西方传统</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/24/n14623042.md#1">【重播】FBI对在费城破获大规模毒品案举行记者会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14621944.md#1">中共四中全会闭幕 高层变局揭盅 中委塌方</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14622032.md#1">中共军委不加人 仅升张升民 董军没戏</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621752.md#1">李嫣现身李亚鹏直播间 30秒带来2300万元业绩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621812.md#1">郭富城晒宝宝正脸照 宣布三胎得女</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14622525.md#1">黄晓明路演尴尬 新片预售票房仅10万元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14622568.md#1">邓莎丈夫被爆行贿千万 两人参演节目延期播出</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/24/n14623053.md#1">林心如陆综才播一集突喊卡 “震撼原因”曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/24/n14622679.md#1">2025年美国空服员的薪资有多少？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14621961.md#1">专家：珍珠奶茶隐藏的风险比你想像的严重</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/24/n14622778.md#1">有白发不是坏事？ 研究：这是防癌机制</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621272.md#1">分手后如何疗伤？ 心理学家分享5个策略</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14620237.md#1">板豆腐vs.嫩豆腐 热量与特色比一比</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650550.md#1">【未解之谜】NASA也无法解释 太阳系神秘入侵者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652776.md#1">【军事情报局】泰柬战争升级 F-16低空轰炸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652899.md#1">【直播】NASA为探索月球、火星所做的准备</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652954.md#1">【百年真相】半夜鸡不叫：周扒皮冤案揭秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651393.md#1">普渡大学为何指示院系拒收中国留学生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651371.md#1">堕胎变催育 中共黑手再次伸向中国女性</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652089.md#1">巧合还是刻意？中共官微帖文惊现“于朦胧”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651415.md#1">刘诗诗得奖遭临时撤换 主办方“爱奇艺”挨轰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652213.md#1">张柏芝遭索赔逾千万 法庭上情绪失控崩溃痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652972.md#1">消失一年被传死讯 陆网红冯提莫自曝停工内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652371.md#1">同一双袜子可以穿两次以上再洗吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/7/8/n14285892.htm">纪念77抗战 大专校友会蒙市升旗释和平鸽</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/7/8/n14285892.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
